# BotCoder

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml
agents/: README.md
company/: AI_COMPANY_POLICY.md
config/: rules.yaml
docs/: 01-architecture.md  02-modules.md  03-configuration.md  04-state-and-data.md  05-development.md  06-roadmap.md  07-decisions.md  README.md  USAGE.md
plans/: plan.md  plan2.md
projects/: bts.yaml  sandbox.yaml  sitesmap.yaml
scripts/: check_auth.py
src/: __init__.py  audit_logger.py  ci_watcher.py  config.py  git_ops.py  github_client.py  init_project.py  main.py  models.py  plan_loader.py  plan_parser.py  reviewer.py  scaffold.py  spinner.py  state_store.py  task_classifier.py
src/dispatcher/: __init__.py  action_dispatcher.py  base.py  sdk_dispatcher.py
src/reviewers/: __init__.py  ai_reviewer.py  policy_reviewer.py
src/scheduling/: __init__.py  dependency_graph.py  lock_manager.py  scheduler.py  worker_pool.py
src/security/: __init__.py  path_guard.py  secret_scanner.py
tests/: test_ci_watcher.py  test_classifier.py  test_continue_on_truncation.py  test_git_ops.py  test_init_project.py  test_path_guard.py  test_plan_parser.py  test_policy_reviewer.py  test_reviewer.py  test_secret_scanner.py  test_state_store.py
