[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-dev-orchestrator"
version = "0.2.3"
description = "AI-first development pipeline: a bot that orchestrates Claude to code per-plan via GitHub Issues/PRs/CI."
requires-python = ">=3.10"
dependencies = [
    "PyGithub>=2.3",
    "claude-agent-sdk>=0.1",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
runbot = "src.main:main"
orchestrator = "src.main:main"

[tool.setuptools]
packages = ["src", "src.dispatcher", "src.reviewers", "src.security", "src.scheduling"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
